# Verax-CV-Assistant

./: .env.example  .gitignore  CLAUDE.md  PACKAGING.md  README.md  pyproject.toml  requirements.md
.claude/: settings.local.json
.github/workflows/: README.md  build-and-test.yml  release.yml
packaging/: build_linux.sh  build_macos.sh  build_windows.sh  verax.spec
src/verax/: __init__.py  main.py
src/verax/builder/: __init__.py  base.py  docx_builder.py  factory.py  html_builder.py  pdf_builder.py
src/verax/core/: __init__.py  batch_processor.py  pipeline.py  session.py
src/verax/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  local_provider.py  openai_provider.py  prompts.py
src/verax/models/: __init__.py  config.py  structured_cv.py  template_schema.py
src/verax/parsers/: __init__.py  base.py  doc.py  docx.py  factory.py  models.py  pdf.py
src/verax/template/: __init__.py  docx_extractor.py  fallback.py  pdf_extractor.py
src/verax/ui/: __init__.py  app.py  styles.py
src/verax/ui/panels/: __init__.py  batch_panel.py  export_panel.py  preview_panel.py  process_panel.py  settings_panel.py  upload_panel.py
src/verax/utils/: __init__.py  config_manager.py  events.py  file_utils.py  logging_config.py  secrets.py
tests/: __init__.py  conftest.py
tests/unit/: test_builders.py
